feat(camera): 添加相机功能入口及相关配置
- 新增了发布版本的签名配置以支持应用签名
- AndroidManifest中添加锁屏显示和禁用键盘的权限
- 在Manifest中声明相机活动CameraActivity，设置为竖屏并禁用导出
- 主界面布局添加“相机”按钮
- MainActivity中新增相机按钮引用及点击事件，启动CameraActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <!-- 开机启动权限 -->
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <!-- 展示在锁定屏幕上的权限 -->
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <!-- 在锁定屏幕上显示活动的权限 -->
+    <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
     
     <!-- 声明使用相机功能 -->
     <uses-feature android:name="android.hardware.camera" android:required="true" />
@@ -64,6 +68,14 @@
             android:exported="false"
             android:label="查看照片"
             android:theme="@style/Theme.CameraApp" />
+        
+        <!-- 相机活动 -->
+        <activity
+            android:name=".CameraActivity"
+            android:exported="false"
+            android:label="相机"
+            android:theme="@style/Theme.CameraApp"
+            android:screenOrientation="portrait" />
         
         <!-- 拍照服务 -->
         <service
