feat(camera): 增加多摄像头支持及闪光灯控制功能
- 移除 CameraActivity，改用 CameraService 处理拍照逻辑实现后台服务化
- CustomCameraManager 新增摄像头索引选择与闪光灯开关状态管理
- 支持选择指定摄像头打开，获取最大拍照分辨率并应用
- 拍照时根据闪光灯设置开启或关闭闪光灯
- MainActivity 增加界面上的摄像头选择按钮，弹出对话框选择摄像头
- MainActivity 增加闪光灯切换按钮，支持预览和拍照时闪光灯状态控制
- 显示当前摄像头名称

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.CameraApp">
+            android:theme="@style/Theme.CameraApp.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -68,14 +68,6 @@
             android:exported="false"
             android:label="查看照片"
             android:theme="@style/Theme.CameraApp" />
-        
-        <!-- 相机活动 -->
-        <activity
-            android:name=".CameraActivity"
-            android:exported="false"
-            android:label="相机"
-            android:theme="@style/Theme.CameraApp"
-            android:screenOrientation="portrait" />
         
         <!-- 拍照服务 -->
         <service
