refactor: 重构包结构和应用品牌相关配置
将包名从com.camera.app更改为com.pipiqiang.qcamera.app
更新应用名称为"皮皮强相机"
修改应用图标和品牌相关资源
更新AndroidManifest中的组件路径和广播action
调整gradle配置中的namespace和applicationId

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,11 @@ plugins {
 }
 
 android {
-    namespace 'com.camera.app'
+    namespace 'com.pipiqiang.qcamera'
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.camera.app"
+        applicationId "com.pipiqiang.qcamera"
         minSdk 24
         targetSdk 32
         versionCode 1
